checkin front end html and css

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # can get very large.
 node_modules
 
+# README.md file
+README.md
+
 # .env file is for local use only. It contains
 # values not to be shared and most of the values
 # will be manually created by you or dynamically # created on the hosting server
@@ -15,4 +18,3 @@ node_modules
 # .DS_Store is only for Mac users
 **/.DS_Store
 
-README.md
